name:                   miv
version:                0.4.8
author:                 itchyny <https://github.com/itchyny>
maintainer:             itchyny <https://github.com/itchyny>
license:                MIT
license-file:           LICENSE
category:               Compiler
build-type:             Simple
cabal-version:          >=1.10
synopsis:               Vim plugin manager written in Haskell
description:            The miv command is a cli tool to manage Vim plugins.

executable miv
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:          -threaded -Wall
  default-language:     Haskell2010
  default-extensions:   BlockArguments
                      , LambdaCase
                      , ImportQualifiedPost
                      , OverloadedStrings
                      , RecordWildCards
  other-modules:        Plugin
                      , Setting
                      , Mode
                      , Command
                      , Cmdline
                      , Mapping
                      , VimScript
                      , Git
                      , Paths_miv
  build-depends:        base
                      , process
                      , async
                      , concurrent-output
                      , SafeSemaphore
                      , time
                      , directory
                      , containers
                      , HsYAML
                      , bytestring
                      , text
                      , text-display
                      , text-builder-linear
                      , unordered-containers
                      , monad-parallel
                      , filepath
                      , filepattern
                      , unix-compat
                      , xdg-basedir

test-suite spec
  hs-source-dirs:       test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  build-depends:        base
                      , ghc-prim
                      , process
                      , time
                      , directory
                      , containers
                      , hspec
                      , HsYAML
                      , bytestring
                      , text
                      , unordered-containers
                      , monad-parallel

source-repository head
  type:     git
  location: git@github.com:itchyny/miv.git
